# bare-bucket

./: .gitignore  README.md  clippy.toml  docker-compose.yml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs  manifest.rs  reconcile.rs  signer.rs  wasm_api.rs
core/src/s3/: error.rs  list.rs  mod.rs  multipart.rs
core/tests/: manifest_store.rs  reconcile.rs  s3_client.rs  s3_integration.rs
docs/: self-hosting.md
docs/superpowers/plans/: 2026-07-15-pr1-core-skeleton-wasm-ci.md  2026-07-15-pr10-upload-flow.md  2026-07-15-pr11-download-flow.md  2026-07-15-pr12-delete-flow.md  2026-07-15-pr13-previews.md  2026-07-15-pr14-thumbnails.md  2026-07-15-pr15-docs-polish.md  2026-07-15-pr2-sigv4-signer.md  2026-07-15-pr3-s3-client.md  2026-07-15-pr4-multipart-engine.md  2026-07-15-pr5-manifest-core.md  2026-07-15-pr6-reconciliation.md  2026-07-15-pr7-svelte-shell.md  2026-07-15-pr8-browse-ui.md  2026-07-15-pr9-views-search.md
docs/superpowers/specs/: 2026-07-15-bare-bucket-v1-design.md
scripts/: seed-demo.sh  wasm-smoke.mjs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte
web/src/components/: Breadcrumbs.svelte  ConflictModal.svelte  DeleteConfirmModal.svelte  FileGrid.svelte  FileList.svelte  GridThumb.svelte  Lightbox.svelte  ModalBase.svelte  Sidebar.svelte  SidebarNode.svelte  TopBar.svelte  TransferPanel.svelte
web/src/lib/: browse.svelte.ts  conflicts.ts  core.ts  deleteConfirm.ts  download.ts  generateMissing.svelte.ts  icons.ts  listing.ts  modalFocus.ts  pdfPreview.ts  preview.ts  profiles.ts  progressThrottle.ts  session.svelte.ts  textPreview.ts  thumbGrid.ts  thumbs.ts  transfers.svelte.ts  upload.ts
web/src/screens/: BrowseScreen.svelte  ConnectScreen.svelte
web/src/styles/: theme.css
web/tests/: conflicts.test.ts  deleteConfirm.test.ts  download.test.ts  generateMissing.test.ts  icons.test.ts  listing.test.ts  modalFocus.test.ts  pdfPreview.test.ts  preview.test.ts  profiles.test.ts  progressThrottle.test.ts  session.test.ts  textPreview.test.ts  thumbGrid.test.ts  thumbs.test.ts  transfers.test.ts  upload.test.ts
