[package]
name = "bare-bucket-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4"
hmac = "0.12"
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.21.1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros", "wasm-bindgen"] }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
